--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@oneidentity/zstd-js": "^1.0.3",
+    "@uidotdev/usehooks": "^2.4.1",
     "buffer": "^6.0.3",
+    "fetch-progress": "^1.3.0",
+    "localforage": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
