--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "buffer": "^6.0.3",
     "fetch-progress": "^1.3.0",
+    "konva": "^9.3.12",
     "localforage": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
