--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@uidotdev/usehooks": "^2.4.1",
     "buffer": "^6.0.3",
     "fetch-progress": "^1.3.0",
+    "flowbite-react": "^0.10.1",
     "konva": "^9.3.12",
     "localforage": "^1.10.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -30,6 +32,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "nightwind": "^1.1.13",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
