--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "buffer": "^6.0.3",
     "fetch-progress": "^1.3.0",
     "flowbite-react": "^0.10.1",
+    "jotai": "^2.8.4",
     "konva": "^9.3.12",
     "localforage": "^1.10.0",
     "react": "^18.3.1",
