--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@oneidentity/zstd-js": "^1.0.3",
     "@uidotdev/usehooks": "^2.4.1",
     "buffer": "^6.0.3",
+    "clsx": "^2.1.1",
     "fetch-progress": "^1.3.0",
     "flowbite-react": "^0.10.1",
     "jotai": "^2.8.4",
