--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "localforage": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-konva": "^18.2.10"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
